# QmReflection

./: LICENSE  README.md  README_zh.md  settings.gradle
QmReflection/: build.gradle
QmReflection/src/main/cpp/: CMakeLists.txt  qmart.cpp  qmart.h
QmReflection/src/main/java/com/qmdeve/reflection/: QmReflection.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/qmdeve/reflection/demo/: App.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
